--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -597,13 +597,15 @@
 
 		&.solid {
 			&:before {
+				font-family: "Font Awesome 6 Brands","Font Awesome 6 Free","Font Awesome 5 Brands","Font Awesome 5 Free";
 				font-weight: 900 !important;
 			}
 		}
 
 		&.brands {
 			&:before {
-				font-family: 'Font Awesome 5 Brands';
+				font-family: "Font Awesome 6 Brands","Font Awesome 6 Free","Font Awesome 5 Brands","Font Awesome 5 Free";
+				font-weight: 400 !important;
 			}
 		}
 
