--- a/assets/sass/libs/_mixins.scss
+++ b/assets/sass/libs/_mixins.scss
@@ -23,6 +23,7 @@
 
 		@if ($category == brands) {
 			font-family: 'Font Awesome 5 Brands';
+			font-weight: 400;
 		}
 		@elseif ($category == solid) {
 			font-family: 'Font Awesome 5 Free';
